2012-01-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed bug #3480597.

2012-01-29 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/key.c: fixed for Mac OS X

2012-01-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genJumpTab): fixed bug 3480545
	* support/regression/tests/bug3480545.c: new, added

2012-01-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-stdarg-4.c:
	  Fix bug #3463344.

2012-01-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-gbz80.def:
	  Fix remaining gbz80 regression failures when using --max-allocs-per-node 5.
	* src/z80/gen.c:
	  Fix right shift for gbz80 using --max-allocs-per-node 1.

2012-01-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix comparison and unary minus for gbz80 when many operands are on the stack.

2012-01-26 Raphael Neider <rneider AT web.de>

	* src/pic14/pcodepeep.c,
	  src/pic14/gen.c,
	  src/pic14/glue.c,
	  src/pic16/device.c,
	  src/pic16/pcodepeep.c,
	  src/pic16/gen.c,
	  src/pic16/pcoderegs.c,
	  src/pic16/ralloc.c,
	  src/pic16/pcode.c,
	  src/pic16/genutils.c: avoid compiler warnings

2012-01-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/cpp/libcpp/internal.h,
	  support/cpp/sdcpp.c,
	  support/cpp/libcpp/lex.c:
	  Remove support for _asm and _endasm, rename macros that had names reserved for the implementation.
	* support/regression/tests/key.c:
	  Regression test for obsolete keywords.

2012-01-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Correctly handle some forgotten corner cases in the fix for #3427564.

2012-01-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* doc/sdccman.lyx:
	  Mention -mz180, -mr2k, named address spaces and use non-deprectaed form of sdcc-specific keywords.