@@ -1,5 +1,10 @@
 2012-01-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* support/regression/tests/bug3482146.c:
+	  Regression test for bug #3482146.
+
+2012-01-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/z80/gen.c:
 	  Fixed bug #3480597.
 
